exam/mTLS-2.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "namespace-policy"
  namespace: "otel-collector"
spec:
  mtls:
    mode: STRICT
