exam/mTLS-3.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "namespace-policy"
  namespace: "resource-group-controller-manager"
spec:
  mtls:
    mode: STRICT
