exam/mTLS.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "system-wide"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
